tdf#125869 LibreOffice UI freezes (shows not responding) while exporting a pdf

Revert "use vcl::Timer in StatusIndicatorFactory"
This reverts commit 848058625c7fad21e2469c95c2a2078678925a5a,
which seems to have been a bad idea

Change-Id: I68be1757717352f164ce27c300a4a0487680891c